api for list of streamers

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,5 +1,9 @@
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Twitch go analytics</title>
+</head>
 <body>
-<h1>Hello!</h1>
+<h1>Twitch go analytics</h1>
 </body>
 </html>
