grab more data from twitch

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -15,7 +15,7 @@
     <h1>Title goes here</h1>
     <p>Streamers:</p>
     <div ng-repeat="streamer in streamers">
-        {{streamer}}
+        {{streamer.display_name}}
     </div>
 </div>
 </body>
