--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,7 +6,7 @@
     <title>Twitch go thing?</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.1/angular.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="css/style.css">
 
     <script src="scripts/app.js"></script>
@@ -16,9 +16,6 @@
 
 <body>
 <div ng-controller="MainController">
-    <header>
-        <h1>I'll come up with a title soon</h1>
-    </header>
     <div class="content">
         <div id="streamers">
             <h3>Streamers</h3>
@@ -33,6 +30,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <a href="about.html">About</a>
+    </footer>
 </div>
 </body>
 </html>
