--- a/resources/public/about.html
+++ b/resources/public/about.html
@@ -26,7 +26,7 @@
     <p>
         Information is collected by periodically checking "Go (Board Game)" game directory on Twitch.tv. Any live streamers
         are stored for future reference. Latest videos section contains last 20 videos from known streamers, excluding any non-go content.
-        New streamer discovery is an ongoing process, so some people who haven't gonna live since the launch of this site won't appear on the list.
+        New streamer discovery is an ongoing process, so some people who haven't gone live since the launch of this site won't appear on the list.
     </p>
 
     <h2>Contact me</h2>
